--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-dark">
+    <div class="container p-5 mt-5 m-auto text-white">
+        <div class="p-3">
+            <h5>Età</h5>
+            <input type="text" id="age">
+        </div>
+        <div class="p-3">
+            <h5>KM da percorrere</h5>
+            <input type="text" id="km">
+        </div>
+        <div class="p-3">
+            <button id="btn">Genera</button>
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
