--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
                 <input type="text" id="name">
             </div>
             <div class="col p-3">
-                <h5>Età</h5>
-                <input type="text" id="age">
-            </div>
-            <div class="col p-3">
                 <h5>KM da percorrere</h5>
                 <input type="text" id="km">
             </div>
+            <div class="col p-3">
+                <h5>Fascia d'età</h5>
+                <select id="age" class="p-1">
+                    <option value=""></option>
+                    <option value="0">Maggiorenne</option>
+                    <option value="20">Minorenne</option>
+                    <option value="40">Over 65</option>
+                </select>
+            </div>
         </div>
         <div class="pt-4 text-center">
-            <button id="btn" class="btn btn-light mx-2 px-3">Genera</button>
-            <button id="btn2" class="btn btn-light mx-2 px-3">Annulla</button>
+            <button id="btnGenera" class="btn btn-light mx-2 px-3">Genera</button>
+            <button id="btnAnnulla" class="btn btn-light mx-2 px-3">Annulla</button>
         </div>
     </div>
     <!-- Il tuo biglietto -->
@@ -43,23 +48,23 @@
         <div class="row border-top border-bottom">
             <div class="col bg-secondary">
                 <h5 class="pt-3 pb-5">Nome passeggero</h5>
-                <p>name</p>
+                <p id="fullName" class="fw-bold"></p>
             </div>
             <div class="col">
-                <h5 class="pt-3 pb-5">Offerta</h5>
-                <p>offert</p>
+                <h5 class="pt-3 pb-5 ps-2">Offerta</h5>
+                <p id="offert" class="fw-semibold fst-italic ps-2"></p>
             </div>
             <div class="col">
                 <h5 class="pt-3 pb-5">Carrozza</h5>
-                <p>car</p>
+                <p id="car" class="fw-semibold fst-italic ps-4"></p>
             </div>
             <div class="col">
                 <h5 class="pt-3 pb-5">Codice CP</h5>
-                <p>cp</p>
+                <p id="cp" class="fw-semibold fst-italic ps-3"></p>
             </div>
             <div class="col">
                 <h5 class="pt-3 pb-5">Costo biglietto</h5>
-                <p>total</p>
+                <p id="tot" class="fw-bold ps-4"></p>
             </div>
         </div>
     </div>
