--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
                             <li class="nav-item nav-h">
                                 <a class="fw-semibold" href="#">Servizi</a>
                             </li>
-                            <li class="nav-item nav-h">
-                                <a class="fw-semibold" href="#">Lavora con noi</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -67,15 +64,15 @@
             <div class="row">
                 <div class="col-12 col-md-4 p-3">
                     <h5>Nome Passeggero</h5>
-                    <input type="text" id="name">
+                    <input type="text" id="name" class="myDisplay">
                 </div>
                 <div class="col-12 col-md-4 p-3">
                     <h5>Km da percorrere</h5>
-                    <input type="text" id="km">
+                    <input type="text" id="km" class="myDisplay">
                 </div>
                 <div class="col-12 col-md-4 p-3">
                     <h5>Fascia d'età</h5>
-                    <select id="age" class="p-1">
+                    <select id="age" class="p-1" class="myDisplay">
                         <option value=""></option>
                         <option value="0">Maggiorenne</option>
                         <option value="20">Minorenne</option>
@@ -99,23 +96,23 @@
             <div class="row border-top border-bottom">
                 <div class="col-12 col-md bg-dark border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Nome passeggero</h5>
-                    <p id="fullName" class="fw-bold"></p>
+                    <p id="fullName" class="fw-bold myDisplay"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5 ps-2">Offerta</h5>
-                    <p id="offert" class="fw-semibold fst-italic ps-2"></p>
+                    <p id="offert" class="fw-semibold fst-italic ps-2 myDisplay"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Carrozza</h5>
-                    <p id="car" class="fw-semibold fst-italic ps-4"></p>
+                    <p id="car" class="fw-semibold fst-italic ps-4 myDisplay"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Codice CP</h5>
-                    <p id="cp" class="fw-semibold fst-italic ps-3"></p>
+                    <p id="cp" class="fw-semibold fst-italic ps-3 myDisplay"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Costo biglietto</h5>
-                    <p id="tot" class="fw-bold ps-4"></p>
+                    <p id="tot" class="fw-bold ps-4 myDisplay"></p>
                 </div>
             </div>
         </div>
