--- a/index.html
+++ b/index.html
@@ -61,29 +61,31 @@
             <h2 class="text-center text-dark p-2 mt-5">CALCOLA IL PREZZO DEL BIGLIETTO</h2>
         </div>
         <div class="container mb-3 p-5 mt-3 m-auto text-white bg-primary rounded-3">
-            <div class="row">
-                <div class="col-12 col-md-4 p-3">
-                    <h5>Nome Passeggero</h5>
-                    <input type="text" id="name" class="myDisplay">
+            <form>
+                <div class="row">
+                    <div class="col-12 col-md-4 p-3">
+                        <h5>Nome Passeggero</h5>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="col-12 col-md-4 p-3">
+                        <h5>Km da percorrere</h5>
+                        <input type="text" id="km">
+                    </div>
+                    <div class="col-12 col-md-4 p-3">
+                        <h5>Fascia d'età</h5>
+                        <select id="age" class="p-1">
+                            <option value=""></option>
+                            <option value="0">Maggiorenne</option>
+                            <option value="20">Minorenne</option>
+                            <option value="40">Over 65</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="col-12 col-md-4 p-3">
-                    <h5>Km da percorrere</h5>
-                    <input type="text" id="km" class="myDisplay">
+                <div class="pt-4 text-md-center">
+                    <button type="button" id="btnGenera" class="d-block d-md-inline-block btn btn-light mb-4 mb-md-0 mx-sm-2 px-sm-3">Genera</button>
+                    <button type="reset" id="btnAnnulla" class="d-block d-md-inline-block btn btn-light mx-sm-2 px-sm-3">Annulla</button>
                 </div>
-                <div class="col-12 col-md-4 p-3">
-                    <h5>Fascia d'età</h5>
-                    <select id="age" class="p-1" class="myDisplay">
-                        <option value=""></option>
-                        <option value="0">Maggiorenne</option>
-                        <option value="20">Minorenne</option>
-                        <option value="40">Over 65</option>
-                    </select>
-                </div>
-            </div>
-            <div class="pt-4 text-md-center">
-                <button id="btnGenera" class="d-block d-md-inline-block btn btn-light mb-4 mb-md-0 mx-sm-2 px-sm-3">Genera</button>
-                <button id="btnAnnulla" class="d-block d-md-inline-block btn btn-light mx-sm-2 px-sm-3">Annulla</button>
-            </div>
+            </form>
         </div>
         <!-- Il tuo biglietto -->
         <div class="pt-5">
@@ -96,23 +98,23 @@
             <div class="row border-top border-bottom">
                 <div class="col-12 col-md bg-dark border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Nome passeggero</h5>
-                    <p id="fullName" class="fw-bold myDisplay"></p>
+                    <p id="fullName" class="fw-bold"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5 ps-2">Offerta</h5>
-                    <p id="offert" class="fw-semibold fst-italic ps-2 myDisplay"></p>
+                    <p id="offert" class="fw-semibold fst-italic ps-2"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Carrozza</h5>
-                    <p id="car" class="fw-semibold fst-italic ps-4 myDisplay"></p>
+                    <p id="car" class="fw-semibold fst-italic ps-4"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Codice CP</h5>
-                    <p id="cp" class="fw-semibold fst-italic ps-3 myDisplay"></p>
+                    <p id="cp" class="fw-semibold fst-italic ps-3"></p>
                 </div>
                 <div class="col-12 col-md bg-secondary border-top border-bottom border-md-0">
                     <h5 class="pt-3 pb-5">Costo biglietto</h5>
-                    <p id="tot" class="fw-bold ps-4 myDisplay"></p>
+                    <p id="tot" class="fw-bold ps-4"></p>
                 </div>
             </div>
         </div>
